--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@ stream = cuda.Stream()</pre>
                 <div>
                     <h6 style="text-align: center;">TensorRT</h6>
                     <video width="400" height="225" controls>
-                      <source src="./static/video/Tensorrt.mp4" type="video/mp4">
+                      <source src="./static/video/tensorrt.mp4" type="video/mp4">
                     </video>
                 </div>
               </li>
